# smite_analyzer

./: .gitignore  Cargo.toml  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose.yml  readme.md
.github/workflows/: rust.yml
backend/: Cargo.toml  Dockerfile
backend/migrations/2023-07-18-194200_create_motds/: down.sql  up.sql
backend/src/: db.rs  main.rs  motd.rs  motd_mode.rs  schema.rs
compose/: Dockerfile  Dockerfile-front
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.json
frontend/src/: App.vue  router.ts
frontend/src/components/: Motd.vue  MyComponent.vue
frontend/src/views/: Home.vue
src/: api_request.rs  handlers.rs  main.rs  models.rs  motd.rs  motd_mode.rs  schema.rs
