[package]
name = "smite-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
anyhow = "1.0.69"
chrono = "0.4.23"
dotenv = "0.15.0"
md5 = "0.7.0"
reqwest = "0.11.14"
serde = { version = "1.0.157", features = ["derive"] }
serde_json = "1.0.94"
thiserror = "1.0.39"
tokio = { version = "1.26.0", features = ["full"] }
url = "2.3.1"
actix-web = "4.3.1"
diesel = { version = "2.0.3", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = "1.4"
listenfd = "1.0.1"
actix-rt = "1.0"
env_logger = "0.10.0"
diesel-derive-enum = { version = "2.0.1", features = ["postgres"] }
