[package]
name = "smite-analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
anyhow = "1.0.69"
chrono = "0.4.23"
diesel = { version = "2.1.0", features = ["postgres"] }
dotenv = "0.15.0"
lazy_static = "1.4.0"
md5 = "0.7.0"
reqwest = "0.11.14"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.94"
thiserror = "1.0.39"
tokio = { version = "1.26.0", features = ["full"] }
url = "2.3.1"
